[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/level.gd" type="Script" id=1]
[ext_resource path="res://sprites/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://music/dynadingo.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/bombdrop.sample" type="Sample" id=4]
[ext_resource path="res://sounds/hahaha.sample" type="Sample" id=5]
[ext_resource path="res://sounds/explosion1.sample" type="Sample" id=6]
[ext_resource path="res://sounds/explosion2.sample" type="Sample" id=7]
[ext_resource path="res://sounds/pickup.sample" type="Sample" id=8]
[ext_resource path="res://sounds/push1.sample" type="Sample" id=9]
[ext_resource path="res://sounds/push2.sample" type="Sample" id=10]
[ext_resource path="res://sounds/yoohoo.sample" type="Sample" id=11]
[ext_resource path="res://sounds/iamback.sample" type="Sample" id=12]

[sub_resource type="Resource" id=1]

samples/bombdrop = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/death = {
"db": 5.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/explosion1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/explosion2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/pickup = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/push1 = {
"db": 10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}
samples/push2 = {
"db": 10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/respawn1 = {
"db": -3.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}
samples/respawn2 = {
"db": -5.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}

[node name="Level" type="Node2D"]

script = ExtResource( 1 )

[node name="MapManager" type="Node" parent="."]


[node name="Indestructible" type="TileMap" parent="MapManager"]

z_index = -1
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
tile_data = PoolIntArray( 0, 1, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 1, 65536, 1, 65537, 7, 65538, 7, 65539, 7, 65540, 7, 65541, 7, 65542, 7, 65543, 7, 65544, 7, 65545, 7, 65546, 7, 65547, 7, 65548, 7, 65549, 7, 65550, 1, 131072, 1, 131073, 7, 131074, 0, 131075, 7, 131076, 0, 131077, 7, 131078, 0, 131079, 7, 131080, 0, 131081, 7, 131082, 0, 131083, 7, 131084, 0, 131085, 7, 131086, 1, 196608, 1, 196609, 7, 196610, 7, 196611, 7, 196612, 7, 196613, 7, 196614, 7, 196615, 7, 196616, 7, 196617, 7, 196618, 7, 196619, 7, 196620, 7, 196621, 7, 196622, 1, 262144, 1, 262145, 7, 262146, 0, 262147, 7, 262148, 0, 262149, 7, 262150, 0, 262151, 7, 262152, 0, 262153, 7, 262154, 0, 262155, 7, 262156, 0, 262157, 7, 262158, 1, 327680, 1, 327681, 7, 327682, 7, 327683, 7, 327684, 7, 327685, 7, 327686, 7, 327687, 7, 327688, 7, 327689, 7, 327690, 7, 327691, 7, 327692, 7, 327693, 7, 327694, 1, 393216, 1, 393217, 7, 393218, 0, 393219, 7, 393220, 0, 393221, 7, 393222, 0, 393223, 7, 393224, 0, 393225, 7, 393226, 0, 393227, 7, 393228, 0, 393229, 7, 393230, 1, 458752, 1, 458753, 7, 458754, 7, 458755, 7, 458756, 7, 458757, 7, 458758, 7, 458759, 7, 458760, 7, 458761, 7, 458762, 7, 458763, 7, 458764, 7, 458765, 7, 458766, 1, 524288, 1, 524289, 7, 524290, 0, 524291, 7, 524292, 0, 524293, 7, 524294, 0, 524295, 7, 524296, 0, 524297, 7, 524298, 0, 524299, 7, 524300, 0, 524301, 7, 524302, 1, 589824, 1, 589825, 7, 589826, 7, 589827, 7, 589828, 7, 589829, 7, 589830, 7, 589831, 7, 589832, 7, 589833, 7, 589834, 7, 589835, 7, 589836, 7, 589837, 7, 589838, 1, 655360, 1, 655361, 7, 655362, 0, 655363, 7, 655364, 0, 655365, 7, 655366, 0, 655367, 7, 655368, 0, 655369, 7, 655370, 0, 655371, 7, 655372, 0, 655373, 7, 655374, 1, 720896, 1, 720897, 7, 720898, 7, 720899, 7, 720900, 7, 720901, 7, 720902, 7, 720903, 7, 720904, 7, 720905, 7, 720906, 7, 720907, 7, 720908, 7, 720909, 7, 720910, 1, 786432, 0, 786433, 0, 786434, 0, 786435, 0, 786436, 0, 786437, 0, 786438, 0, 786439, 0, 786440, 0, 786441, 0, 786442, 0, 786443, 0, 786444, 0, 786445, 0, 786446, 0 )

[node name="Destructible" type="TileMap" parent="MapManager"]

z_index = -1
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
tile_data = PoolIntArray( 65539, 2, 65540, 2, 65541, 2, 65542, 2, 65543, 4, 65545, 2, 65546, 2, 65547, 2, 131075, 2, 131077, 2, 131079, 2, 131081, 2, 131083, 2, 196609, 2, 196612, 4, 196614, 2, 196616, 2, 196617, 2, 196618, 4, 196619, 2, 196620, 2, 196621, 2, 262145, 2, 262147, 2, 262149, 2, 262151, 2, 262155, 2, 262157, 2, 327681, 2, 327682, 2, 327683, 2, 327684, 2, 327685, 2, 327686, 2, 327687, 4, 327688, 2, 327690, 2, 327692, 2, 327693, 2, 393217, 2, 393221, 2, 393223, 2, 393225, 2, 393227, 2, 393229, 2, 458753, 2, 458755, 2, 458756, 2, 458758, 2, 458759, 2, 458761, 2, 458762, 2, 458763, 4, 458765, 2, 524289, 2, 524291, 2, 524293, 4, 524295, 2, 524297, 2, 524299, 2, 524301, 4, 589825, 4, 589826, 2, 589828, 2, 589829, 2, 589830, 2, 589831, 2, 589832, 2, 589834, 2, 589836, 2, 589837, 2, 655363, 2, 655365, 2, 655367, 2, 655369, 2, 720899, 2, 720901, 2, 720902, 4, 720904, 2, 720905, 2, 720906, 2, 720907, 2 )

[node name="PlayerManager" type="Node" parent="."]


[node name="BombManager" type="Node" parent="."]


[node name="CollectibleManager" type="Node" parent="."]


[node name="StreamPlayer" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 3 )
playing = false
loop = true
volume_db = 0.0
autoplay = false
paused = false
loop_offset = 0.0
buffering_msec = 500

[node name="SamplePlayer" type="Node" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 0.0
default/filter/resonance = 0.0
default/filter/gain = 0.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0
